example/errors/lexer/unknown_character_escape.box
set x: char = '\a\b';

set y
